# rastereasy

./: .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENCE  MANIFEST.in  README.md  environment_rastereasy.yml  pyproject.toml
.github/workflows/: draft_pdf.yml  tests.yml
joos_paper/: paper.bib  paper.md
paper/: paper.md  paper_with_code.md
src/rastereasy/: Untitled.ipynb  __init__.py  rastereasy.py  utils.py
src/rastereasy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rastereasy/.ipynb_checkpoints/: rastereasy-checkpoint.py  utils-checkpoint.py
tests/: test_core.py
tests/data/: RGB_common_1.tif  RGB_common_2.tif  sentinel.tif
tests/shp/: Roi_G5.dbf  Roi_G5.shp  Roi_G5.shx
tests/tostack/: G5_B2.tif  G5_B3.tif  G5_B4.tif  G5_B8.tif
