[tool.setuptools]
packages = { find = { where = ["src"] } }
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rastereasy"
authors = [{name = "Thomas Corpetti", email = "thomas.corpetti@gmail.com"}]
description = "A library to ease the manipulation of geospatial images"
version = "0.3.2"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "rasterio",
    "geopandas",
    "POT>=0.9.5",
    "scikit-learn",
    "matplotlib",
    "ipywidgets",
    "PyQt5",
    "ipympl"
]
[project.urls]
Homepage = "https://rastereasy.github.io/"
Repository = "https://github.com/pythonraster/rastereasy"
